# endfield-sarkaz

./: .gitignore  .gitmodules  AGENTS.md  FINE_TUNING_PLAN.md  PLAN.md  README.md  pyproject.toml
inference/: __init__.py  sarkaz_decoder.py  trie_builder.py
scripts/: clean_corpus.py  evaluate.py  extract_corpus.py  generate_corpus.py  local_qwen3_verify.sh  local_tiny_verify.sh
training/: __init__.py  base_train.py  cloud_train.py  common.py  data_generator.py  merge_tokenizer.py  tokenizer_train.py
